# Graduation-project

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.en.md  README.md  docker-compose.yml  entrypoint.sh  eslint.config.js  index.html  index.md  main.py  package.json  pyproject.toml  readme.md  run.py  tsconfig.app.json  tsconfig.node.json  upload.py  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  deploy-docs.yml  docker-hardhat.yml  docker-worker.yml  docker.yml  sync-gitee-to-github.yaml
.vitepress/: config.mts
.vitepress/theme/: cyberdocs-theme.css  index.css  index.ts
app/: __init__.py  config.py
app/DTO/: Audit.py  Base.py  aircrafts.py  dictionary.py  file.py  flights.py  inspectionItems.py  inspections.py  model.py  pagination.py  tasks.py  terminals.py  user.py
app/annotations/: loggingAnnot.py  permissionAnnot.py
app/consts/: Aircrafts.py  Dict.py  Dictionary.py  Flight.py  IPFS.py  InspectionConsts.py  InspectionItem.py  InspectionModel.py  Network.py  Permissions.py  Roles.py  Task.py  Terminals.py  Web3.py  auth.py  model.py
app/exceptions/: face.py  flights.py
app/ext/: ext_celery.py
app/ipfs/: Client.py
app/mapper/: roleMapper.py  userMapper.py  userRolePermissionMapper.py
app/models/: __init__.py  aircraft.py  audit.py  auth.py  blockchain.py  dictionary.py  engineer.py  flight.py  inspection.py  model.py  response.py  task.py  terminal.py
app/routes/: aircraft_api.py  auth_api.py  dictionary_api.py  ipfs_api.py  (+7 more)
pc-ui/: README.md  package-lock.json  package.json
scripts/: startScripts.py
src/: App.css  MyApp.tsx  index.css  main.tsx
tests/: conftest.py  test.py
web3/: .env.example  Dockerfile  README.md  hardhat.config.ts  package-lock.json  package.json  run.sh
(+335 files in other folders)
