[project]
name = "facelogin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "insightface>=0.7.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "weaviate-client>=4.15.0",
]
