[project]
name = "large-passenger-aircraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-jwt-extended==4.7.1",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "gevent==25.5.1",
    "gunicorn==23.0.0",
    "insightface==0.7.3",
    "marshmallow==3.26.1",
    "mysqlclient==2.2.7",
    "onnx==1.18.0",
    "onnxruntime==1.22.0",
    "opencv-python==4.11.0.86",
    "pydantic==2.11.3",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "sqlalchemy-serializer==1.4.22",
    "weaviate-client==4.15.0",
    "web3==7.10.0",
]
